5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4478/executions/1807_2566.log
== TEST (2019-06-13 02:09:54) 
-- CODE:
from numpy import*
v1 = array(eval(input("historico de faltas: ")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros[6]
for i in v1:
	if v1[i] == 2:
		vcont[0] = vcont[0]+1
	elif v1[i] == 3:
		vcont[1] = vcont[1]+1
	elif v1[i] == 4:
		vcont[2] = vcont[2]+1
	elif v1[i] == 5:
		vcont[3] = vcont[3]+1
	elif v1[i] == 6:
		vcont[4] = vcont[4]+1
	else:
		vcont[5] = vcont[5]+1
for i in range(0, size(vcont)):
	vcont[i] = round(vcont[i]/size(v1)*100,1)
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 02:11:23) 
-- CODE:
from numpy import*
v1 = array(eval(input("historico de faltas: ")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros[6]
for i in v1:
	if v1[i] == 2:
		vcont[0] = vcont[0]+1
	elif v1[i] == 3:
		vcont[1] = vcont[1]+1
	elif v1[i] == 4:
		vcont[2] = vcont[2]+1
	elif v1[i] == 5:
		vcont[3] = vcont[3]+1
	elif v1[i] == 6:
		vcont[4] = vcont[4]+1
	else:
		vcont[5] = vcont[5]+1
for i in range(0, size(vcont)):
	vcont[i] = round(vcont[i]/size(v1)*100,1)
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 02:12:39) 
-- CODE:
from numpy import*
v1 = array(eval(input("historico de faltas: ")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(6, dtype=int)
for i in v1:
	if v1[i] == 2:
		vcont[0] = vcont[0]+1
	elif v1[i] == 3:
		vcont[1] = vcont[1]+1
	elif v1[i] == 4:
		vcont[2] = vcont[2]+1
	elif v1[i] == 5:
		vcont[3] = vcont[3]+1
	elif v1[i] == 6:
		vcont[4] = vcont[4]+1
	else:
		vcont[5] = vcont[5]+1
for i in range(0, size(vcont)):
	vcont[i] = round(vcont[i]/size(v1)*100,1)
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 02:13:00) 
-- CODE:
from numpy import*
v1 = array(eval(input("historico de faltas: ")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(6, dtype=int)
for i in v1:
	if v1[i] == 2:
		vcont[0] = vcont[0]+1
	elif v1[i] == 3:
		vcont[1] = vcont[1]+1
	elif v1[i] == 4:
		vcont[2] = vcont[2]+1
	elif v1[i] == 5:
		vcont[3] = vcont[3]+1
	elif v1[i] == 6:
		vcont[4] = vcont[4]+1
	else:
		vcont[5] = vcont[5]+1
for i in range(0, size(vcont)):
	vcont[i] = round(vcont[i]/size(v1)*100,1)
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 02:13:07) 
-- CODE:
from numpy import*
v1 = array(eval(input("historico de faltas: ")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(6, dtype=int)
for i in v1:
	if v1[i] == 2:
		vcont[0] = vcont[0]+1
	elif v1[i] == 3:
		vcont[1] = vcont[1]+1
	elif v1[i] == 4:
		vcont[2] = vcont[2]+1
	elif v1[i] == 5:
		vcont[3] = vcont[3]+1
	elif v1[i] == 6:
		vcont[4] = vcont[4]+1
	else:
		vcont[5] = vcont[5]+1
for i in range(0, size(vcont)):
	vcont[i] = round(vcont[i]/size(v1)*100,1)
print(vcont)
-- EXECUTION TIME:
1.0148
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18  0  0 18 62  0]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 0  4 64 32  0  0]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[ 0 15 38 15 30  0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 02:13:22) 
-- CODE:
from numpy import*
v1 = array(eval(input("historico de faltas: ")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(6, dtype=int)
for i in v1:
	if v1[i] == 2:
		vcont[0] = vcont[0]+1
	elif v1[i] == 3:
		vcont[1] = vcont[1]+1
	elif v1[i] == 4:
		vcont[2] = vcont[2]+1
	elif v1[i] == 5:
		vcont[3] = vcont[3]+1
	elif v1[i] == 6:
		vcont[4] = vcont[4]+1
	else:
		vcont[5] = vcont[5]+1
for i in range(0, size(vcont)):
	vcont[i] = round(vcont[i]/size(v1)*100,1)
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 02:13:40) 
-- CODE:
from numpy import*
v1 = array(eval(input("historico de faltas: ")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(6, dtype=int)
for i in v1:
	if v1[i] == 2:
		vcont[0] = vcont[0]+1
	elif v1[i] == 3:
		vcont[1] = vcont[1]+1
	elif v1[i] == 4:
		vcont[2] = vcont[2]+1
	elif v1[i] == 5:
		vcont[3] = vcont[3]+1
	elif v1[i] == 6:
		vcont[4] = vcont[4]+1
	else:
		vcont[5] = vcont[5]+1
for i in range(0, size(vcont)):
	vcont[i] = round(vcont[i]/size(v1)*100,1)
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 02:14:20) 
-- CODE:
from numpy import*
v1 = array(eval(input("historico de faltas: ")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(6, dtype=int)
for i in v1:
	if v1[i] == 2:
		vcont[0] = vcont[0]+1
	elif v1[i] == 3:
		vcont[1] = vcont[1]+1
	elif v1[i] == 4:
		vcont[2] = vcont[2]+1
	elif v1[i] == 5:
		vcont[3] = vcont[3]+1
	elif v1[i] == 6:
		vcont[4] = vcont[4]+1
	else:
		vcont[5] = vcont[5]+1
for i in range(0, size(vcont)):
	vcont[i] = round(vcont[i]/size(v1)*100,1)
print(vcont)
-- EXECUTION TIME:
1.17713
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18  0  0 18 62  0]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 0  4 64 32  0  0]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[ 0 15 38 15 30  0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 02:15:35) 
-- CODE:
from numpy import*
v1 = array(eval(input("historico de faltas: ")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(6, dtype=float)
for i in v1:
	if v1[i] == 2:
		vcont[0] = vcont[0]+1
	elif v1[i] == 3:
		vcont[1] = vcont[1]+1
	elif v1[i] == 4:
		vcont[2] = vcont[2]+1
	elif v1[i] == 5:
		vcont[3] = vcont[3]+1
	elif v1[i] == 6:
		vcont[4] = vcont[4]+1
	else:
		vcont[5] = vcont[5]+1
for i in range(0, size(vcont)):
	vcont[i] = round(vcont[i]/size(v1)*100,1)
print(vcont)
-- EXECUTION TIME:
1.14862
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 62.5  0. ]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 0.  4. 64. 32.  0.  0.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[ 0.  15.4 38.5 15.4 30.8  0. ]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 02:15:43) 
-- CODE:
from numpy import*
v1 = array(eval(input("historico de faltas: ")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(6, dtype=int)
for i in v1:
	if v1[i] == 2:
		vcont[0] = vcont[0]+1
	elif v1[i] == 3:
		vcont[1] = vcont[1]+1
	elif v1[i] == 4:
		vcont[2] = vcont[2]+1
	elif v1[i] == 5:
		vcont[3] = vcont[3]+1
	elif v1[i] == 6:
		vcont[4] = vcont[4]+1
	else:
		vcont[5] = vcont[5]+1
for i in range(0, size(vcont)):
	vcont[i] = round(vcont[i]/size(v1)*100,1)
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 02:16:18) 
-- CODE:
from numpy import*
v1 = array(eval(input("historico de faltas: ")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(6, dtype=int)
for i in v1:
	if v1[i] == 2:
		vcont[0] = vcont[0]+1
	elif v1[i] == 3:
		vcont[1] = vcont[1]+1
	elif v1[i] == 4:
		vcont[2] = vcont[2]+1
	elif v1[i] == 5:
		vcont[3] = vcont[3]+1
	elif v1[i] == 6:
		vcont[4] = vcont[4]+1
	else:
		vcont[5] = vcont[5]+1
for i in range(0, size(vcont)):
	vcont[i] = round(vcont[i]/size(v1)*100,1)
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 02:16:28) 
-- CODE:
from numpy import*
v1 = array(eval(input("historico de faltas: ")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(6, dtype=int)
for i in v1:
	if v1[i] == 2:
		vcont[0] = vcont[0]+1
	elif v1[i] == 3:
		vcont[1] = vcont[1]+1
	elif v1[i] == 4:
		vcont[2] = vcont[2]+1
	elif v1[i] == 5:
		vcont[3] = vcont[3]+1
	elif v1[i] == 6:
		vcont[4] = vcont[4]+1
	else:
		vcont[5] = vcont[5]+1
for i in range(0, size(vcont)):
	vcont[i] = round(vcont[i]/size(v1)*100,1)
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 02:18:52) 
-- CODE:
from numpy import*
v1 = array(eval(input("historico de faltas: ")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(6, dtype=int)
for i in v1:
	if v1[i] == 2:
		vcont[0] = vcont[0]+1
	elif v1[i] == 3:
		vcont[1] = vcont[1]+1
	elif v1[i] == 4:
		vcont[2] = vcont[2]+1
	elif v1[i] == 5:
		vcont[3] = vcont[3]+1
	elif v1[i] == 6:
		vcont[4] = vcont[4]+1
	else:
		vcont[5] = vcont[5]+1
for i in range(0, size(vcont)):
	vcont[i] = round(vcont[i]/size(v1)*100,1)
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 02:19:03) 
-- CODE:
from numpy import*
v1 = array(eval(input("historico de faltas: ")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(6, dtype=int)
for i in v1:
	if v1[i] == 2:
		vcont[0] = vcont[0]+1
	elif v1[i] == 3:
		vcont[1] = vcont[1]+1
	elif v1[i] == 4:
		vcont[2] = vcont[2]+1
	elif v1[i] == 5:
		vcont[3] = vcont[3]+1
	elif v1[i] == 6:
		vcont[4] = vcont[4]+1
	else:
		vcont[5] = vcont[5]+1
for i in range(0, size(vcont)):
	vcont[i] = round(vcont[i]/size(v1)*100,1)
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 02:19:32) 
-- CODE:
from numpy import*
v1 = array(eval(input("historico de faltas: ")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(6, dtype=int)
for i in v1:
	if v1[i] == 2:
		vcont[0] = vcont[0]+1
	elif v1[i] == 3:
		vcont[1] = vcont[1]+1
	elif v1[i] == 4:
		vcont[2] = vcont[2]+1
	elif v1[i] == 5:
		vcont[3] = vcont[3]+1
	elif v1[i] == 6:
		vcont[4] = vcont[4]+1
	else:
		vcont[5] = vcont[5]+1
for i in range(0, size(vcont)):
	vcont[i] = round(vcont[i]/size(v1)*100,1)
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 02:20:11) 
-- CODE:
from numpy import*
v1 = array(eval(input("historico de faltas: ")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(6, dtype=int)
for i in v1:
	if v1[i] == 2:
		vcont[0] = vcont[0]+1
	elif v1[i] == 3:
		vcont[1] = vcont[1]+1
	elif v1[i] == 4:
		vcont[2] = vcont[2]+1
	elif v1[i] == 5:
		vcont[3] = vcont[3]+1
	elif v1[i] == 6:
		vcont[4] = vcont[4]+1
	else:
		vcont[5] = vcont[5]+1
for i in range(0, size(vcont)):
	vcont[i] = round(vcont[i]/size(v1)*100,1)
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 06:07:50) 
-- CODE:
from numpy import*
v1 = array(eval(input("historico de faltas: ")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(6, dtype=int)
for i in v1:
	if v1[i] == 2:
		vcont[0] = vcont[0]+1
	elif v1[i] == 3:
		vcont[1] = vcont[1]+1
	elif v1[i] == 4:
		vcont[2] = vcont[2]+1
	elif v1[i] == 5:
		vcont[3] = vcont[3]+1
	elif v1[i] == 6:
		vcont[4] = vcont[4]+1
	else:
		vcont[5] = vcont[5]+1
for i in range(0, size(vcont)):
	vcont[i] = round(vcont[i] / size(v1) *100, 1)
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 06:08:07) 
-- CODE:
from numpy import*
v1 = array(eval(input("historico de faltas: ")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(6, dtype=int)
for i in v1:
	if v1[i] == 2:
		vcont[0] = vcont[0]+1
	elif v1[i] == 3:
		vcont[1] = vcont[1]+1
	elif v1[i] == 4:
		vcont[2] = vcont[2]+1
	elif v1[i] == 5:
		vcont[3] = vcont[3]+1
	elif v1[i] == 6:
		vcont[4] = vcont[4]+1
	else:
		vcont[5] = vcont[5]+1
for i in range(0, size(vcont)):
	vcont[i] = round(vcont[i] / size(v1) *100, 1)
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 06:12:28) 
-- CODE:
from numpy import*
v1 = array(eval(input("historico de faltas: ")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(6, dtype=int)
for i in v1:
	if v1[i] == 2:
		vcont[0] = vcont[0]+1
	elif v1[i] == 3:
		vcont[1] = vcont[1]+1
	elif v1[i] == 4:
		vcont[2] = vcont[2]+1
	elif v1[i] == 5:
		vcont[3] = vcont[3]+1
	elif v1[i] == 6:
		vcont[4] = vcont[4]+1
	elif v1[i] == 7:
		vcont[5] = vcont[5]+1
for i in range(0, size(vcont)):
	vcont[i] = round(vcont[i] / size(v1) *100, 1)
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 06:12:53) 
-- CODE:
from numpy import*
v1 = array(eval(input("historico de faltas: ")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(6, dtype=int)
for i in v1:
	if v1[i] == 2:
		vcont[0] = vcont[0]+1
	elif v1[i] == 3:
		vcont[1] = vcont[1]+1
	elif v1[i] == 4:
		vcont[2] = vcont[2]+1
	elif v1[i] == 5:
		vcont[3] = vcont[3]+1
	elif v1[i] == 6:
		vcont[4] = vcont[4]+1
	elif v1[i] == 7:
		vcont[5] = vcont[5]+1
for i in range(0, size(vcont)):
	vcont[i] = round(vcont[i] / size(v1) *100, 1)
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 06:12:59) 
-- CODE:
from numpy import*
v1 = array(eval(input("historico de faltas: ")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(6, dtype=int)
for i in v1:
	if v1[i] == 2:
		vcont[0] = vcont[0]+1
	elif v1[i] == 3:
		vcont[1] = vcont[1]+1
	elif v1[i] == 4:
		vcont[2] = vcont[2]+1
	elif v1[i] == 5:
		vcont[3] = vcont[3]+1
	elif v1[i] == 6:
		vcont[4] = vcont[4]+1
	elif v1[i] == 7:
		vcont[5] = vcont[5]+1
for i in range(0, size(vcont)):
	vcont[i] = round(vcont[i] / size(v1) *100, 1)
print(vcont)
-- EXECUTION TIME:
1.1112
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18  0  0 18 62  0]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 0  4 64 32  0  0]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[ 0 15 38 15 30  0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 06:18:06) 
-- CODE:
from numpy import*
v1 = array(eval(input("historico de faltas: ")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(6, dtype=int)
for i in v1:
	if i == 2:
		vcont[0] = vcont[0]+1
	elif i == 3:
		vcont[1] = vcont[1]+1
	elif i == 4:
		vcont[2] = vcont[2]+1
	elif i == 5:
		vcont[3] = vcont[3]+1
	elif i == 6:
		vcont[4] = vcont[4]+1
	elif i == 7:
		vcont[5] = vcont[5]+1
for i in range(0, size(vcont)):
	vcont[i] = round(vcont[i] / size(v1) *100, 1)
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 06:18:46) 
-- CODE:
from numpy import*
v1 = array(eval(input("historico de faltas: ")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(6, dtype=int)
for i in v1:
	if i == 2:
		vcont[0] = vcont[0]+1
	elif i == 3:
		vcont[1] = vcont[1]+1
	elif i == 4:
		vcont[2] = vcont[2]+1
	elif i == 5:
		vcont[3] = vcont[3]+1
	elif i == 6:
		vcont[4] = vcont[4]+1
	elif i == 7:
		vcont[5] = vcont[5]+1

print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 06:24:30) 
-- CODE:
from numpy import*
v1 = array(eval(input("historico de faltas: ")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(6, dtype=int)
for i in v1:
	if i == 2:
		vcont[0] = vcont[0]+1
	elif i == 3:
		vcont[1] = vcont[1]+1
	elif i == 4:
		vcont[2] = vcont[2]+1
	elif i == 5:
		vcont[3] = vcont[3]+1
	elif i == 6:
		vcont[4] = vcont[4]+1
	elif i == 7:
		vcont[5] = vcont[5]+1
for i in range(0, size(vcont)):
	vcont[i] = round(vcont[i] / size(v1) *100, 1)
print(vcont)
-- EXECUTION TIME:
1.09933
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18  0  0 18 25 37]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4  8 16 20 20 32]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15  7 23  7 15 30]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 06:26:43) 
-- CODE:
from numpy import*
v1 = array(eval(input("historico de faltas: ")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(6, dtype=int)
for i in v1:
	if i == 2:
		vcont[0] = vcont[0]+1
	elif i == 3:
		vcont[1] = vcont[1]+1
	elif i == 4:
		vcont[2] = vcont[2]+1
	elif i == 5:
		vcont[3] = vcont[3]+1
	elif i == 6:
		vcont[4] = vcont[4]+1
	elif i == 7:
		vcont[5] = vcont[5]+1
for i in range(0, size(vcont)):
	vcont[i] = round(vcont[i] / 100, 1)
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 06:27:20) 
-- CODE:
from numpy import*
v1 = array(eval(input("historico de faltas: ")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(6, dtype=int)
for i in v1:
	if i == 2:
		vcont[0] = vcont[0]+1
	elif i == 3:
		vcont[1] = vcont[1]+1
	elif i == 4:
		vcont[2] = vcont[2]+1
	elif i == 5:
		vcont[3] = vcont[3]+1
	elif i == 6:
		vcont[4] = vcont[4]+1
	elif i == 7:
		vcont[5] = vcont[5]+1
for i in range(0, size(vcont)):
	vcont[i] = round(vcont[i]/ size(v1) / 100, 1)
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 06:27:42) 
-- CODE:
from numpy import*
v1 = array(eval(input("historico de faltas: ")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(6, dtype=int)
for i in v1:
	if i == 2:
		vcont[0] = vcont[0]+1
	elif i == 3:
		vcont[1] = vcont[1]+1
	elif i == 4:
		vcont[2] = vcont[2]+1
	elif i == 5:
		vcont[3] = vcont[3]+1
	elif i == 6:
		vcont[4] = vcont[4]+1
	elif i == 7:
		vcont[5] = vcont[5]+1
for i in range(0, size(vcont)):
	vcont[i] = round(vcont[i]/ size(v1) * 100, 1)
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 06:27:56) 
-- CODE:
from numpy import*
v1 = array(eval(input("historico de faltas: ")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(6, dtype=int)
for i in v1:
	if i == 2:
		vcont[0] = vcont[0]+1
	elif i == 3:
		vcont[1] = vcont[1]+1
	elif i == 4:
		vcont[2] = vcont[2]+1
	elif i == 5:
		vcont[3] = vcont[3]+1
	elif i == 6:
		vcont[4] = vcont[4]+1
	elif i == 7:
		vcont[5] = vcont[5]+1
for i in range(0, size(vcont)):
	vcont[i] = round(vcont[i]/ size(v1) * 100, 1)
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 06:28:01) 
-- CODE:
from numpy import*
v1 = array(eval(input("historico de faltas: ")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(6, dtype=int)
for i in v1:
	if i == 2:
		vcont[0] = vcont[0]+1
	elif i == 3:
		vcont[1] = vcont[1]+1
	elif i == 4:
		vcont[2] = vcont[2]+1
	elif i == 5:
		vcont[3] = vcont[3]+1
	elif i == 6:
		vcont[4] = vcont[4]+1
	elif i == 7:
		vcont[5] = vcont[5]+1
for i in range(0, size(vcont)):
	vcont[i] = round(vcont[i]/ size(v1) * 100, 1)
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 06:28:10) 
-- CODE:
from numpy import*
v1 = array(eval(input("historico de faltas: ")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(6, dtype=int)
for i in v1:
	if i == 2:
		vcont[0] = vcont[0]+1
	elif i == 3:
		vcont[1] = vcont[1]+1
	elif i == 4:
		vcont[2] = vcont[2]+1
	elif i == 5:
		vcont[3] = vcont[3]+1
	elif i == 6:
		vcont[4] = vcont[4]+1
	elif i == 7:
		vcont[5] = vcont[5]+1
for i in range(0, size(vcont)):
	vcont[i] = round(vcont[i]/ size(v1) * 100, 1)
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 06:28:52) 
-- CODE:
from numpy import*
v1 = array(eval(input("historico de faltas: ")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(6, dtype=int)
for i in v1:
	if i == 2:
		vcont[0] = vcont[0]+1
	elif i == 3:
		vcont[1] = vcont[1]+1
	elif i == 4:
		vcont[2] = vcont[2]+1
	elif i == 5:
		vcont[3] = vcont[3]+1
	elif i == 6:
		vcont[4] = vcont[4]+1
	elif i == 7:
		vcont[5] = vcont[5]+1
for i in range(0, size(vcont)):
	vcont[i] = round(vcont[i]/ size(v1) * 100, 1)
print(vcont)
-- EXECUTION TIME:
0.968587
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18  0  0 18 25 37]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4  8 16 20 20 32]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15  7 23  7 15 30]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 06:29:07) 
-- CODE:
from numpy import*
v1 = array(eval(input("historico de faltas: ")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(6, dtype=int)
for i in v1:
	if i == 2:
		vcont[0] = vcont[0]+1
	elif i == 3:
		vcont[1] = vcont[1]+1
	elif i == 4:
		vcont[2] = vcont[2]+1
	elif i == 5:
		vcont[3] = vcont[3]+1
	elif i == 6:
		vcont[4] = vcont[4]+1
	elif i == 7:
		vcont[5] = vcont[5]+1
for i in range(0, size(vcont)):
	vcont[i] = round(vcont[i]/ size(v1) * 100, 1)
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 06:29:20) 
-- CODE:
from numpy import*
v1 = array(eval(input("historico de faltas: ")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(6, dtype=int)
for i in v1:
	if i == 2:
		vcont[0] = vcont[0]+1
	elif i == 3:
		vcont[1] = vcont[1]+1
	elif i == 4:
		vcont[2] = vcont[2]+1
	elif i == 5:
		vcont[3] = vcont[3]+1
	elif i == 6:
		vcont[4] = vcont[4]+1
	elif i == 7:
		vcont[5] = vcont[5]+1
for i in range(0, size(vcont)):
	vcont[i] = round(vcont[i]/ size(v1) * 100, 1)
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 06:29:40) 
-- CODE:
from numpy import*
v1 = array(eval(input("historico de faltas: ")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(6, dtype=int)
for i in v1:
	if i == 2:
		vcont[0] = vcont[0]+1
	elif i == 3:
		vcont[1] = vcont[1]+1
	elif i == 4:
		vcont[2] = vcont[2]+1
	elif i == 5:
		vcont[3] = vcont[3]+1
	elif i == 6:
		vcont[4] = vcont[4]+1
	elif i == 7:
		vcont[5] = vcont[5]+1
for i in range(0, size(vcont)):
	vcont[i] = round(vcont[i]/ size(v1) * 100, 1)
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 06:30:00) 
-- CODE:
from numpy import*
v1 = array(eval(input("historico de faltas: ")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(6, dtype=int)
for i in v1:
	if i == 2:
		vcont[0] = vcont[0]+1
	elif i == 3:
		vcont[1] = vcont[1]+1
	elif i == 4:
		vcont[2] = vcont[2]+1
	elif i == 5:
		vcont[3] = vcont[3]+1
	elif i == 6:
		vcont[4] = vcont[4]+1
	elif i == 7:
		vcont[5] = vcont[5]+1
for i in range(0, size(vcont)):
	vcont[i] = round(vcont[i]/ size(v1) * 100, 1)
print(vcont)
-- EXECUTION TIME:
1.11012
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18  0  0 18 25 37]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4  8 16 20 20 32]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15  7 23  7 15 30]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 06:30:27) 
-- CODE:
from numpy import*
v1 = array(eval(input("historico de faltas: ")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(6, dtype=int)
for i in v1:
	if i == 2:
		vcont[0] = vcont[0]+1
	elif i == 3:
		vcont[1] = vcont[1]+1
	elif i == 4:
		vcont[2] = vcont[2]+1
	elif i == 5:
		vcont[3] = vcont[3]+1
	elif i == 6:
		vcont[4] = vcont[4]+1
	elif i == 7:
		vcont[5] = vcont[5]+1
for i in range(0, size(vcont)):
	vcont[i] = round(vcont / size(v1) * 100, 1)
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 06:30:46) 
-- CODE:
from numpy import*
v1 = array(eval(input("historico de faltas: ")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(6, dtype=int)
for i in v1:
	if i == 2:
		vcont[0] = vcont[0]+1
	elif i == 3:
		vcont[1] = vcont[1]+1
	elif i == 4:
		vcont[2] = vcont[2]+1
	elif i == 5:
		vcont[3] = vcont[3]+1
	elif i == 6:
		vcont[4] = vcont[4]+1
	elif i == 7:
		vcont[5] = vcont[5]+1
for i in range(0, size(vcont)):
	vcont[i] = round(vcont[i] / size(v1) * 100, 1)
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 06:31:01) 
-- CODE:
from numpy import*
v1 = array(eval(input("historico de faltas: ")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(6, dtype=int)
for i in v1:
	if i == 2:
		vcont[0] = vcont[0]+1
	elif i == 3:
		vcont[1] = vcont[1]+1
	elif i == 4:
		vcont[2] = vcont[2]+1
	elif i == 5:
		vcont[3] = vcont[3]+1
	elif i == 6:
		vcont[4] = vcont[4]+1
	elif i == 7:
		vcont[5] = vcont[5]+1
for i in range(0, size(vcont)):
	vcont[i] = round(vcont[i] / size(v1) * 100, 1)
print(vcont)
-- EXECUTION TIME:
1.05534
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18  0  0 18 25 37]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4  8 16 20 20 32]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15  7 23  7 15 30]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 06:33:06) 
-- CODE:
from numpy import*
v1 = array(eval(input("historico de faltas: ")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(6, dtype=int)
for i in v1:
	if i == 2:
		vcont[0] = vcont[0]+1
	elif i == 3:
		vcont[1] = vcont[1]+1
	elif i == 4:
		vcont[2] = vcont[2]+1
	elif i == 5:
		vcont[3] = vcont[3]+1
	elif i == 6:
		vcont[4] = vcont[4]+1
	elif i == 7:
		vcont[5] = vcont[5]+1
for i in range(0, size(vcont)):
	vcont[i] = round(vcont[i] / size(v1) * 100, 2)
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 06:33:20) 
-- CODE:
from numpy import*
v1 = array(eval(input("historico de faltas: ")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(6, dtype=int)
for i in v1:
	if i == 2:
		vcont[0] = vcont[0]+1
	elif i == 3:
		vcont[1] = vcont[1]+1
	elif i == 4:
		vcont[2] = vcont[2]+1
	elif i == 5:
		vcont[3] = vcont[3]+1
	elif i == 6:
		vcont[4] = vcont[4]+1
	elif i == 7:
		vcont[5] = vcont[5]+1
for i in range(0, size(vcont)):
	vcont[i] = round(vcont[i] / size(v1) * 100, 2)
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 06:35:49) 
-- CODE:
from numpy import*
v1 = array(eval(input("historico de faltas: ")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(6, dtype=int)
for i in v1:
	if i == 2:
		vcont[0] = vcont[0]+1
	elif i == 3:
		vcont[1] = vcont[1]+1
	elif i == 4:
		vcont[2] = vcont[2]+1
	elif i == 5:
		vcont[3] = vcont[3]+1
	elif i == 6:
		vcont[4] = vcont[4]+1
	elif i == 7:
		vcont[5] = vcont[5]+1
for i in range(0, size(vcont)):
	porc = vcont[i] / size (v1) * 100
	vcont = round(porc, 2)
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 06:37:04) 
-- CODE:
from numpy import*
v1 = array(eval(input("historico de faltas: ")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(6, dtype=int)
for i in v1:
	if i == 2:
		vcont[0] = vcont[0]+1
	elif i == 3:
		vcont[1] = vcont[1]+1
	elif i == 4:
		vcont[2] = vcont[2]+1
	elif i == 5:
		vcont[3] = vcont[3]+1
	elif i == 6:
		vcont[4] = vcont[4]+1
	elif i == 7:
		vcont[5] = vcont[5]+1
for i in range(0, size(vcont)):
	vcont[i] = round(vcont[i] / size(v1) * 100, 2)
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 06:41:14) 
-- CODE:
from numpy import*
v1 = array(eval(input("historico de faltas: ")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(6, dtype=int)
for i in v1:
	if i == 2:
		vcont[0] = vcont[0]+1
	elif i == 3:
		vcont[1] = vcont[1]+1
	elif i == 4:
		vcont[2] = vcont[2]+1
	elif i == 5:
		vcont[3] = vcont[3]+1
	elif i == 6:
		vcont[4] = vcont[4]+1
	elif i == 7:
		vcont[5] = vcont[5]+1
for i in range(0, size(vcont)):
	vcont[i] = round(vcont[i] / size(v1) * 100, 1)
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 06:42:32) 
-- CODE:
from numpy import*
v1 = array(eval(input("historico de faltas: ")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(6, dtype=int)
for i in v1:
	if i == 2:
		vcont[0] = vcont[0]+1
	elif i == 3:
		vcont[1] = vcont[1]+1
	elif i == 4:
		vcont[2] = vcont[2]+1
	elif i == 5:
		vcont[3] = vcont[3]+1
	elif i == 6:
		vcont[4] = vcont[4]+1
	elif i == 7:
		vcont[5] = vcont[5]+1
for i in range(0, size(vcont)):
	vcont[i] = (vcont[i] / size(v1) * 100)
print(round(vcont,1)
-- ERROR:
File "XXXX", line 27
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 06:42:42) 
-- CODE:
from numpy import*
v1 = array(eval(input("historico de faltas: ")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(6, dtype=int)
for i in v1:
	if i == 2:
		vcont[0] = vcont[0]+1
	elif i == 3:
		vcont[1] = vcont[1]+1
	elif i == 4:
		vcont[2] = vcont[2]+1
	elif i == 5:
		vcont[3] = vcont[3]+1
	elif i == 6:
		vcont[4] = vcont[4]+1
	elif i == 7:
		vcont[5] = vcont[5]+1
for i in range(0, size(vcont)):
	vcont[i] = (vcont[i] / size(v1) * 100)
print(round(vcont,1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 06:43:59) 
-- CODE:
from numpy import*
v1 = array(eval(input("historico de faltas: ")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(6, dtype=int)
for i in v1:
	if i == 2:
		vcont[0] = vcont[0]+1
	elif i == 3:
		vcont[1] = vcont[1]+1
	elif i == 4:
		vcont[2] = vcont[2]+1
	elif i == 5:
		vcont[3] = vcont[3]+1
	elif i == 6:
		vcont[4] = vcont[4]+1
	elif i == 7:
		vcont[5] = vcont[5]+1
for i in range(0, size(vcont)):
	vcont[i] = (vcont[i] / size(v1) * 100)
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 06:44:58) 
-- CODE:
from numpy import*
v1 = array(eval(input("historico de faltas: ")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(6, dtype=int)
for i in v1:
	if i == 2:
		vcont[0] = vcont[0]+1
	elif i == 3:
		vcont[1] = vcont[1]+1
	elif i == 4:
		vcont[2] = vcont[2]+1
	elif i == 5:
		vcont[3] = vcont[3]+1
	elif i == 6:
		vcont[4] = vcont[4]+1
	elif i == 7:
		vcont[5] = vcont[5]+1
for i in range(0, size(vcont)):
	vcont[i] = round((vcont[i] / size(v1) * 100), 1)
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 06:45:10) 
-- CODE:
from numpy import*
v1 = array(eval(input("historico de faltas: ")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(6, dtype=int)
for i in v1:
	if i == 2:
		vcont[0] = vcont[0]+1
	elif i == 3:
		vcont[1] = vcont[1]+1
	elif i == 4:
		vcont[2] = vcont[2]+1
	elif i == 5:
		vcont[3] = vcont[3]+1
	elif i == 6:
		vcont[4] = vcont[4]+1
	elif i == 7:
		vcont[5] = vcont[5]+1
for i in range(0, size(vcont)):
	vcont[i] = round((vcont[i] / size(v1) * 100), 1)
print(vcont)
-- EXECUTION TIME:
1.07719
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18  0  0 18 25 37]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4  8 16 20 20 32]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15  7 23  7 15 30]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 06:57:31) 
-- CODE:
from numpy import*
v1 = array(eval(input("historico de faltas: ")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(6, dtype=int)
for i in v1:
	if i == 2:
		vcont[0] = vcont[0]+1
	elif i == 3:
		vcont[1] = vcont[1]+1
	elif i == 4:
		vcont[2] = vcont[2]+1
	elif i == 5:
		vcont[3] = vcont[3]+1
	elif i == 6:
		vcont[4] = vcont[4]+1
	elif i == 7:
		vcont[5] = vcont[5]+1
for i in range(0, size(vcont)):
	vcont[i] = round((vcont[i] / size(v1) * 100), 1)
print(round(vcont,1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:06:48) 
-- CODE:
from numpy import*
v1 = array(eval(input("historico de faltas: ")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(6, dtype=int)
for i in range(0, size(v1)):
	if i == 2:
		vcont[0] = vcont[0]+1
	elif i == 3:
		vcont[1] = vcont[1]+1
	elif i == 4:
		vcont[2] = vcont[2]+1
	elif i == 5:
		vcont[3] = vcont[3]+1
	elif i == 6:
		vcont[4] = vcont[4]+1
	elif i == 7:
		vcont[5] = vcont[5]+1
for i in range(0, size(vcont)):
	vcont[i] = round((vcont[i] / size(v1) * 100), 1)
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:07:06) 
-- CODE:
from numpy import*
v1 = array(eval(input("historico de faltas: ")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(6, dtype=int)
for i in range(0, size(v1)):
	if i == 2:
		vcont[0] = vcont[0]+1
	elif i == 3:
		vcont[1] = vcont[1]+1
	elif i == 4:
		vcont[2] = vcont[2]+1
	elif i == 5:
		vcont[3] = vcont[3]+1
	elif i == 6:
		vcont[4] = vcont[4]+1
	elif i == 7:
		vcont[5] = vcont[5]+1
for i in range(0, size(vcont)):
	vcont[i] = round((vcont[i] / size(v1) * 100), 1)
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:07:34) 
-- CODE:
from numpy import*
v1 = array(eval(input("historico de faltas: ")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(6, dtype=int)
for i in range(0, v1):
	if i == 2:
		vcont[0] = vcont[0]+1
	elif i == 3:
		vcont[1] = vcont[1]+1
	elif i == 4:
		vcont[2] = vcont[2]+1
	elif i == 5:
		vcont[3] = vcont[3]+1
	elif i == 6:
		vcont[4] = vcont[4]+1
	elif i == 7:
		vcont[5] = vcont[5]+1
for i in range(0, size(vcont)):
	vcont[i] = round((vcont[i] / size(v1) * 100), 1)
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:08:01) 
-- CODE:
from numpy import*
v1 = array(eval(input("historico de faltas: ")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(6, dtype=int)
for i in size(v1):
	if i == 2:
		vcont[0] = vcont[0]+1
	elif i == 3:
		vcont[1] = vcont[1]+1
	elif i == 4:
		vcont[2] = vcont[2]+1
	elif i == 5:
		vcont[3] = vcont[3]+1
	elif i == 6:
		vcont[4] = vcont[4]+1
	elif i == 7:
		vcont[5] = vcont[5]+1
for i in range(0, size(vcont)):
	vcont[i] = round((vcont[i] / size(v1) * 100), 1)
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:08:17) 
-- CODE:
from numpy import*
v1 = array(eval(input("historico de faltas: ")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(6, dtype=int)
for i in size[v1]:
	if i == 2:
		vcont[0] = vcont[0]+1
	elif i == 3:
		vcont[1] = vcont[1]+1
	elif i == 4:
		vcont[2] = vcont[2]+1
	elif i == 5:
		vcont[3] = vcont[3]+1
	elif i == 6:
		vcont[4] = vcont[4]+1
	elif i == 7:
		vcont[5] = vcont[5]+1
for i in range(0, size(vcont)):
	vcont[i] = round((vcont[i] / size(v1) * 100), 1)
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:08:33) 
-- CODE:
from numpy import*
v1 = array(eval(input("historico de faltas: ")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(6, dtype=int)
for i in v1:
	if i == 2:
		vcont[0] = vcont[0]+1
	elif i == 3:
		vcont[1] = vcont[1]+1
	elif i == 4:
		vcont[2] = vcont[2]+1
	elif i == 5:
		vcont[3] = vcont[3]+1
	elif i == 6:
		vcont[4] = vcont[4]+1
	elif i == 7:
		vcont[5] = vcont[5]+1
for i in range(0, size(vcont)):
	vcont[i] = round((vcont[i] / size(v1) * 100), 1)
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:09:28) 
-- CODE:
from numpy import*
v1 = array(eval(input("historico de faltas: ")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(6, dtype=int)
for i in range(0,size(vetFaltas)):
	dia = vetFaltas[i] - 2
	vcont[dia] = vcont[dia] + 1
	
for i in range(0,size(vcont)):
	vcont[i] = round(vcont[i] / size(vetFaltas) * 100,1)
	
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:09:53) 
-- CODE:
from numpy import*
vetFaltas = array(eval(input("historico de faltas: ")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(6, dtype=int)
for i in range(0,size(vetFaltas)):
	dia = vetFaltas[i] - 2
	vcont[dia] = vcont[dia] + 1
	
for i in range(0,size(vcont)):
	vcont[i] = round(vcont[i] / size(vetFaltas) * 100,1)
	
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 11:10:06) 
-- CODE:
from numpy import*
vetFaltas = array(eval(input("historico de faltas: ")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(6, dtype=int)
for i in range(0,size(vetFaltas)):
	dia = vetFaltas[i] - 2
	vcont[dia] = vcont[dia] + 1
	
for i in range(0,size(vcont)):
	vcont[i] = round(vcont[i] / size(vetFaltas) * 100,1)
	
print(vcont)
-- EXECUTION TIME:
0.788222
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18  0  0 18 25 37]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4  8 16 20 20 32]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15  7 23  7 15 30]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:11:41) 
-- CODE:
from numpy import*
v1 = array(eval(input("historico de faltas: ")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(5, dtype=int)
for i in v1:
	if i == 2:
		vcont[0] = vcont[0]+1
	elif i == 3:
		vcont[1] = vcont[1]+1
	elif i == 4:
		vcont[2] = vcont[2]+1
	elif i == 5:
		vcont[3] = vcont[3]+1
	elif i == 6:
		vcont[4] = vcont[4]+1
	elif i == 7:
		vcont[5] = vcont[5]+1
for i in range(0, size(vcont)):
	vcont[i] = round((vcont[i] / size(v1) * 100), 1)
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:11:49) 
-- CODE:
from numpy import*
v1 = array(eval(input("historico de faltas: ")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(5, dtype=int)
for i in v1:
	if i == 2:
		vcont[0] = vcont[0]+1
	elif i == 3:
		vcont[1] = vcont[1]+1
	elif i == 4:
		vcont[2] = vcont[2]+1
	elif i == 5:
		vcont[3] = vcont[3]+1
	elif i == 6:
		vcont[4] = vcont[4]+1
	elif i == 7:
		vcont[5] = vcont[5]+1
for i in range(0, size(vcont)):
	vcont[i] = round((vcont[i] / size(v1) * 100), 1)
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:11:51) 
-- CODE:
from numpy import*
v1 = array(eval(input("historico de faltas: ")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(5, dtype=int)
for i in v1:
	if i == 2:
		vcont[0] = vcont[0]+1
	elif i == 3:
		vcont[1] = vcont[1]+1
	elif i == 4:
		vcont[2] = vcont[2]+1
	elif i == 5:
		vcont[3] = vcont[3]+1
	elif i == 6:
		vcont[4] = vcont[4]+1
	elif i == 7:
		vcont[5] = vcont[5]+1
for i in range(0, size(vcont)):
	vcont[i] = round((vcont[i] / size(v1) * 100), 1)
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:12:41) 
-- CODE:
from numpy import*
v1 = array(eval(input("historico de faltas: ")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(5, dtype=int)
for i in v1:
	if i == 2:
		vcont[0] = vcont[0]+1
	elif i == 3:
		vcont[1] = vcont[1]+1
	elif i == 4:
		vcont[2] = vcont[2]+1
	elif i == 5:
		vcont[3] = vcont[3]+1
	elif i == 6:
		vcont[4] = vcont[4]+1
	elif i == 7:
		vcont[5] = vcont[5]+1
for i in range(0, size(vcont)):
	vcont[i] = round((vcont[i] / size(v1) * 100), 1)
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:14:27) 
-- CODE:
from numpy import *

vetFaltas = array(eval(input("Historico de faltas: ")))

vcont = zeros(6)

for i in range(0,size(vetFaltas)):
	dia = vetFaltas[i] - 2
	vcont[dia] = vcont[dia] + 1
	
for i in range(0,size(vcont)):
	vcont[i] = round(vcont[i] / size(vetFaltas) * 100,1)
	
print(vcont)
#from numpy import*
#v1 = array(eval(input("historico de faltas: ")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

#vcont = zeros(5, dtype=int)
#for i in v1:
#	if i == 2:
#		vcont[0] = vcont[0]+1
#	elif i == 3:
#		vcont[1] = vcont[1]+1
#	elif i == 4:
#		vcont[2] = vcont[2]+1
#	elif i == 5:
#		vcont[3] = vcont[3]+1
#	elif i == 6:
#		vcont[4] = vcont[4]+1
#	elif i == 7:
#		vcont[5] = vcont[5]+1
#for i in range(0, size(vcont)):
#	vcont[i] = round((vcont[i] / size(v1) * 100), 1)
#print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 11:14:47) 
-- CODE:
from numpy import *

vetFaltas = array(eval(input("Historico de faltas: ")))

vcont = zeros(6)

for i in range(0,size(vetFaltas)):
	dia = vetFaltas[i] - 2
	vcont[dia] = vcont[dia] + 1
	
for i in range(0,size(vcont)):
	vcont[i] = round(vcont[i] / size(vetFaltas) * 100,1)
	
print(vcont)
#from numpy import*
#v1 = array(eval(input("historico de faltas: ")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

#vcont = zeros(5, dtype=int)
#for i in v1:
#	if i == 2:
#		vcont[0] = vcont[0]+1
#	elif i == 3:
#		vcont[1] = vcont[1]+1
#	elif i == 4:
#		vcont[2] = vcont[2]+1
#	elif i == 5:
#		vcont[3] = vcont[3]+1
#	elif i == 6:
#		vcont[4] = vcont[4]+1
#	elif i == 7:
#		vcont[5] = vcont[5]+1
#for i in range(0, size(vcont)):
#	vcont[i] = round((vcont[i] / size(v1) * 100), 1)
#print(vcont)
-- EXECUTION TIME:
0.910994
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.4  7.7 23.1  7.7 15.4 30.8]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:14:58) 
-- CODE:
from numpy import*
v1 = array(eval(input("historico de faltas: ")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(5, dtype=int)
for i in v1:
	if i == 2:
		vcont[0] = vcont[0]+1
	elif i == 3:
		vcont[1] = vcont[1]+1
	elif i == 4:
		vcont[2] = vcont[2]+1
	elif i == 5:
		vcont[3] = vcont[3]+1
	elif i == 6:
		vcont[4] = vcont[4]+1
	elif i == 7:
		vcont[5] = vcont[5]+1
for i in range(0, size(vcont)):
	vcont[i] = round((vcont[i] / size(v1) * 100), 1)
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:20:06) 
-- CODE:
from numpy import*
v1 = array(eval(input("historico de faltas: ")))
# 2 = falta na segunda
# 3 = falta na terça
# 4 = falta na quarta
# 5 = falta na quinta
# 6 = falta na quarta
# 7 = falta no sabado

vcont = zeros(5, dtype=int)
for i in v1:
	if i == 2:
		vcont[0] = vcont[0]+1
	elif i == 3:
		vcont[1] = vcont[1]+1
	elif i == 4:
		vcont[2] = vcont[2]+1
	elif i == 5:
		vcont[3] = vcont[3]+1
	elif i == 6:
		vcont[4] = vcont[4]+1
	elif i == 7:
		vcont[5] = vcont[5]+1
for i in range(0, size(vcont)):
	vcont[i] = round((vcont[i] / size(v1) * 100), 1)
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
